# rust-shop

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20211113205243_create_products_table.sql
src/: lib.rs  main.rs
src/http/: mod.rs  server.rs
src/http/handlers/: products.rs
src/model/: product.rs
src/repository/: product.rs
